# HiveGame

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  NSIS.template.in  README  README.md  README.txt  TODO  autoexec.py  behaviour.cpp  behaviour.h  buildall.bat  buildall.vc8.bat  buildall.vc9.bat  config.h  config.h.in  configure.ac  console.cpp  console.h  hivegame.cfg  hivegame.cpp  hivegame.h  hivegame.vcproj  installer.nsi  map.cpp  map.h  msvc8.sln  player.cpp  player.h  pyhivegame.h  pyhivegame.i  pyhivegame.vcproj  util.cpp  vfs.cfg
HiveGame/: CMakeLists.txt  buildall.vc8.bat  buildall.vc9.bat
HiveGame/BeeEngine/: CMakeLists.txt
HiveGame/BeeEngine/include/: BeeEngine.hpp  Character.hpp  CharacterManager.hpp  DotSceneLoader.hpp  GameObject.hpp  Terrain.hpp  World.hpp  config.h.in
HiveGame/BeeEngine/src/: BeeEngine.cpp  Character.cpp  CharacterManager.cpp  DotSceneLoader.cpp  GameObject.cpp  Terrain.cpp  World.cpp
HiveGame/Bullet/: CMakeLists.txt
HiveGame/Caelum/: CMakeLists.txt
HiveGame/Caelum/main/src/: Astronomy.cpp  (+4 more)
HiveGame/HiveGame/: CMakeLists.txt
HiveGame/HiveGame/include/: HiveGame.hpp
HiveGame/HiveGame/res/: icon.rc  resource.h
HiveGame/HiveGame/src/: HiveGame.cpp
HiveGame/Hydrax/: CMakeLists.txt  GodRaysManager.cpp  Hydrax.cpp  Mesh.cpp  RttManager.cpp
HiveGame/MyGUI/: CMakeLists.txt
HiveGame/MyGUI/CMake/: CMakeLists.txt  ConfigureBuild.cmake  Dependencies.cmake  MyGUIInstallDependencies.cmake
HiveGame/MyGUI/Common/: CMakeLists.txt
HiveGame/MyGUI/MyGUIEngine/: CMakeLists.txt  MyGUIEngine.list
HiveGame/OgreBullet/: CMakeLists.txt  Makefile.am  OgreBullet_VC8.sln  OgreBullet_readme.txt  configure.ac  premake.lua  srclistfileOgreBullet.txt
HiveGame/OgreBullet/Collisions/: Makefile.am
HiveGame/OgreBullet/nsis/: OgreBullet_Demos.nsi  OgreBullet_SDK.nsi  OgreBullet_Source.nsi  Plugins_ogrebullet_binary.cfg  resources_ogrebullet_binary.cfg
HiveGame/OgreOggSound/: CMakeLists.txt  COPYING  ChangeLog.txt  ReleaseNotes.txt
HiveGame/OgreOggSound/include/: OgreOggSoundPrereqs.h
HiveGame/OgreOggSound/src/: OgreOggISound.cpp  OgreOggListener.cpp  OgreOggSoundFactory.cpp  OgreOggSoundPlugin.cpp  OgreOggSoundPluginDllStart.cpp  OgreOggSoundRecord.cpp  OgreOggStaticSound.cpp  OgreOggStaticWavSound.cpp  OgreOggStreamWavSound.cpp  ogreoggsoundmanager.cpp  ogreoggstreamsound.cpp
HiveGame/PagedGeometry/include/: GrassLoader.h
HiveGame/PagedGeometry/source/: CMakeLists.txt
HiveGame/cmake/: FindGit.cmake  FindOpenAL.cmake  NSIS.template.in
HiveGame/freetype/: CMakeLists.txt
HiveGame/libogg/: CMakeLists.txt
HiveGame/libvorbis/: CMakeLists.txt
Ogitor/: AUTHORS  CMakeLists.txt  Hash.txt  ReadMe.txt  SetCthughaVariable.bat  buildall.vc9.bat
Ogitor/CMakeModules/: FindOGRE.cmake
Ogitor/CMakeModules/Templates/: plugins.cfg.in
Ogitor/CMakeModules/packaging/: NSIS.template.in
Ogitor/Dependencies/MeshMagick/: CMakeLists.txt
Ogitor/Dependencies/PagedGeometry/: CMakeLists.txt
Ogitor/Dependencies/SkyX/: CMakeLists.txt
Ogitor/Help/: CMakeLists.txt  collection_ogitor.qhc  ogitor.qch
Ogitor/Ogitor/: CMakeLists.txt
Ogitor/Ogitor/include/: BaseEditor.h  BaseSerializer.h  CameraEditor.h  DefaultEvents.h  Event.h  EventManager.h  LightEditor.h  Ogitors.h  OgitorsDefinitions.h  OgitorsProperty.h  OgitorsRoot.h  OgitorsSceneSerializer.h  OgitorsScriptConsole.h  OgitorsScriptInterpreter.h  OgitorsSystem.h  OgitorsUtils.h  TerrainPageEditor.h  tinystr.h  tinyxml.h
Ogitor/Ogitor/src/: CameraEditor.cpp  DefaultEvents.cpp  EventManager.cpp  LightEditor.cpp  MarkerEditor.cpp  NodeEditor.cpp  OgitorsClipboardManager.cpp  OgitorsMasterView.cpp  OgitorsRoot.cpp  OgitorsRootUtilityFunctions.cpp  OgitorsSceneSerializer.cpp  OgitorsScriptConsole.cpp  OgitorsUndoManager.cpp  OgitorsUtils.cpp  OgitorsView.cpp  PGInstanceManager.cpp  ParticleEditor.cpp  PlaneEditor.cpp  SceneManagerEditor.cpp  TerrainGroupEditor.cpp  TerrainGroupEditorImportExport.cpp  TerrainGroupEditorUpdate.cpp  TerrainPageEditor.cpp  TerrainPageEditorGrass.cpp  TerrainPageEditorImportExport.cpp  ViewportEditorEvents.cpp  tinyxml.cpp
Ogitor/Plugins/DotSceneSerializer/: CMakeLists.txt  DotSceneSerializer.cpp  DotSceneSerializer.h  DotSceneSerializerExport.cpp
Ogitor/Plugins/OgCaelum/: CMakeLists.txt  CaelumEditor.cpp  CaelumEditor.h
Ogitor/Plugins/OgHydrax/: CMakeLists.txt  HydraxWaterEditor.cpp  HydraxWaterEditor.h
Ogitor/Plugins/OgModularZone/: CMakeLists.txt  ModularZoneEditor.cpp  ModularZoneEditor.h  ModularZoneFactory.cpp  ModularZoneFactory.h  ModularZonePlugin.cpp  ModularZonePlugin.h  ModularZoneToolbar.hxx  PortalEditor.cpp  PortalEditor.h  PortalFactory.h  PortalOutlineRenderable.h  ZoneInfo.h  ZoneListWidget.cpp  ZoneListWidget.hxx
Ogitor/Plugins/OgSkyx/: CMakeLists.txt  SkyxEditor.cpp  SkyxEditor.h
Ogitor/Resources/: OgitorInstall.xcf  OgitorLogo.xcf  OgitorLogoSmall.xcf
Ogitor/RunPath/: CMakeLists.txt
Ogitor/RunPath/languages/: ogitor_da.qm  ogitor_de.qm  ogitor_es.qm  ogitor_fr.qm  ogitor_it.qm  ogitor_nl.qm  ogitor_pt_BR.qm  ogitor_ru.qm  ogitor_tr.qm  ogitor_zh.qm
Ogitor/qtOgitor/: CMakeLists.txt  ogitorpreferencestab.ui  settingsdialog.ui
Ogitor/qtOgitor/include/: magickwidget.hxx  mainwindow.hxx  ogitorpreferenceswidget.hxx  ogrewidget.hxx  preferencesmanager.hxx  qtogitorsystem.h  settingsdialog.hxx
Ogitor/qtOgitor/languages/: ogitor_da.ts  ogitor_de.ts  ogitor_es.ts  ogitor_fr.ts  ogitor_it.ts  ogitor_nl.ts  ogitor_pt_BR.ts  ogitor_ru.ts  ogitor_tr.ts  ogitor_zh.ts
Ogitor/qtOgitor/res/: qtOgitor.qrc
Ogitor/qtOgitor/src/: aboutdialog.cpp  entityview.cpp  layerview.cpp  magickwidget.cpp  main.cpp  mainwindow.cpp  mainwindowactions.cpp  objectsview.cpp  ogitorpreferenceswidget.cpp  ogrewidget.cpp  preferencesmanager.cpp  propertiesviewgeneral.cpp  qtogitorsystem.cpp  settingsdialog.cpp  shortcuts.cpp  templateview.cpp  terraintoolswidget.cpp
OgreBullet/: CMakeLists.txt  OgreBullet.pc.in  autogen.sh
OgreBullet/Collisions/src/: Makefile.am
PagedGeometry/: CMakeLists.txt
PagedGeometry/source/: CMakeLists.txt
(+56 files in other folders)
